--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
