--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation "androidx.room:room-runtime:2.2.5"
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
+    annotationProcessor "androidx.room:room-compiler:2.2.5"
 }
