--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,4 +48,12 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.2.5"
     annotationProcessor "androidx.room:room-compiler:2.2.5"
 
+
+    def lifecycle_version = "2.2.0"
+    def arch_version = "2.1.0"
+    //ViewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    //LifeData
+    implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 }
